// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Order Items component should  not render Tracking Button And Tracking header 1`] = `
<Fragment>
  <Styled(View)>
    <Styled(BodyCopy)
      accessibilityText=""
      dataLocator=""
      fontFamily="secondary"
      fontSize="fs14"
      margin={null}
      numberOfLines={null}
      text={null}
      textDecoration={null}
    />
    <Styled(BodyCopy)
      accessibilityText=""
      dataLocator=""
      fontFamily="secondary"
      fontSize="fs14"
      fontWeight="semibold"
      margin={null}
      numberOfLines={null}
      text={null}
      textDecoration={null}
    />
  </Styled(View)>
</Fragment>
`;

exports[`Order Items component should renders Tracking Button 1`] = `
<Fragment>
  <Styled(View)>
    <Styled(BodyCopy)
      accessibilityText=""
      dataLocator=""
      fontFamily="secondary"
      fontSize="fs14"
      margin={null}
      numberOfLines={null}
      text={null}
      textDecoration={null}
    />
    <Styled(BodyCopy)
      accessibilityText=""
      dataLocator=""
      fontFamily="secondary"
      fontSize="fs14"
      fontWeight="semibold"
      margin={null}
      numberOfLines={null}
      text={null}
      textDecoration={null}
    />
  </Styled(View)>
  <Styled(View)>
    <Connect(ClickTracker)
      as={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "_foldedDefaultProps": Object {
            "active": false,
            "buttonVariation": "fixed-width",
            "color": "",
            "customStyle": Object {},
            "customTextStyle": null,
            "disableButton": false,
            "fill": "",
            "fullWidth": "",
            "iconColor": "gray.800",
            "iconName": "chevron-down",
            "iconSize": "fs12",
            "locator": "",
            "navigation": Object {},
            "onPress": null,
            "paddings": "12px 32px 12px 32px",
            "selected": false,
            "selectedIcon": "chevron-up",
            "showIcon": false,
            "text": "",
            "theme": Object {},
            "url": "",
            "withNoLineHeight": false,
          },
          "attrs": Array [],
          "displayName": "Styled(CustomButton)",
          "inlineStyle": InlineStyle {
            "rules": Array [
              "
    ",
              "
  justify-content: center;
  min-height: 32px;
  border: 1px solid ",
              [Function],
              ";
  opacity: ",
              [Function],
              ";

  ",
              [Function],
              ";
  ",
              [Function],
              ";
  ",
              [Function],
              ";
  ",
              [Function],
              ";
  ",
              [Function],
              ";
  ",
              [Function],
              ";
  ",
              [Function],
              ";

  ",
              [Function],
              ";

  ",
              [Function],
              "

  ",
              [Function],
              ";
  ",
              [Function],
              ";
  ",
              [Function],
              ";
",
              ";
  ",
            ],
          },
          "render": [Function],
          "styledComponentId": "StyledNativeComponent",
          "target": [Function],
          "withComponent": [Function],
        }
      }
      buttonVariation="fixed-width"
      clickData={
        Object {
          "customEvents": "event118",
          "pageName": "myplace:orders:order details",
          "pageSection": "myplace",
          "pageSubSection": "myplace",
          "pageType": "myplace",
        }
      }
      color="white"
      data-locator="orders-shop-now-btn"
      fill="BLUE"
      module="account"
      name="order_tracking"
      onPress={[Function]}
      text="lbl_orders_trackit"
      width="100%"
    />
  </Styled(View)>
</Fragment>
`;

exports[`Order Items component should renders tracking header 1`] = `
<Fragment>
  <Styled(View)>
    <Styled(BodyCopy)
      accessibilityText=""
      dataLocator=""
      fontFamily="secondary"
      fontSize="fs14"
      margin={null}
      numberOfLines={null}
      text="lbl_orders_shippedOn"
      textDecoration={null}
    />
    <Styled(BodyCopy)
      accessibilityText=""
      dataLocator=""
      fontFamily="secondary"
      fontSize="fs14"
      fontWeight="semibold"
      margin={null}
      numberOfLines={null}
      text="May 1, 2019"
      textDecoration={null}
    />
  </Styled(View)>
  <Styled(View)>
    <Styled(BodyCopy)
      accessibilityText=""
      dataLocator=""
      fontFamily="secondary"
      fontSize="fs14"
      margin={null}
      numberOfLines={null}
      text="lbl_orders_trackingNumber"
      textDecoration={null}
    />
    <Styled(BodyCopy)
      accessibilityText=""
      dataLocator=""
      fontFamily="secondary"
      fontSize="fs14"
      fontWeight="semibold"
      margin={null}
      numberOfLines={null}
      text="1234567"
      textDecoration={null}
    />
  </Styled(View)>
</Fragment>
`;
